Fixing spacing
Changed spacing in basic-info class

--- a/assets/css/jb.css
+++ b/assets/css/jb.css
@@ -142,7 +142,7 @@
 
 .basic-info ul > li > span
 {
-  width: 12em;
+  width: 9em;
   color: grey;
   float: left;
 }
